[package]
name = "streamdeck-rs"
version = "0.1.0"
authors = ["Richard Case <richard.case@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap-v3 = "3.0.0-beta.1"
hidapi = "1.2.6"
libusb = "0.3.0"
log = "0.4.14"
rusttype = "0.9.2"
simplelog = "0.10.0"
streamdeck = "0.4.8"
structopt = "0.3.22"
